css/knave.css
  @import url("https://fonts.googleapis.com/css2?family=Martel:wght@400;800&family=Roboto:wght@300;400;500&display=swap");
  @import url('https://fonts.googleapis.com/css2?family=Averia+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap');
  /* Global styles */
  .window-app {
    font-family: "Averia Libre", sans-serif;
  }

  ::-webkit-scrollbar-track {
    box-shadow: none;
  }

  .form-fields {
    flex: 1 !important;
  }

  ::-webkit-scrollbar-thumb {
    background-color: #333333;
    border: none;
    border-radius: 1px;
  }

  .window-app .window-content {
    width: 100%;
    height: 100%;
    
    background-color: white;
    background-image: none;

    padding: 0;
  }

  .rollable:hover, .rollable:focus {
    text-shadow: 0 0 10px red;
    cursor: pointer;
  }

  /* Overall */
  .knave-sheet-grid {
    width: 100%;
    height: 100%;

    display: grid;
    grid-template-columns: 220px 1fr 300px;
    grid-template-rows: 1fr;

    padding: 8px;

  }

  .item .window-content,
  .form .window-content,
  .scene-sheet .window-content,
  .roll-table-config .window-content,
  .compendium .window-content,
  .filepicker .window-content,
  .token-sheet .window-content,
  .dialog .window-content {
    padding: 8px;
  }

  .centerer {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .verticalign {
    display: flex;
    align-items: center;
  }

  /* Left Column - Ability Scores. Defense and Hit Points */
  .left-col {
    height: 504px;
    width: 100%;
    
    text-align: center;
  }

  .left-col input {
    border: none;
    font-family: "Averia Libre";
    background-color: #e4e5e6;
    border-radius: 5px;
  }

  .left-col img {
    border: none;
  }

  .left-col .header-row {
    font-weight: bold;
    font-size: 10pt;
  }

  .left-col .left-row {
    width: 100%;
    display: grid;
    grid-template-columns: 2fr 3fr 2fr;
    margin-bottom: 3px;
  }

  .left-col .left-row .ability-centering-box {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .left-col .left-row .ability-defense {
    width: 50px;
    font-size: 20pt;
    text-align: center;
  }

  .left-col .left-row .ability-label {
    font-size: 25pt;
    font-family: "IM Fell English";

  }

  .left-col .left-row .ability-bonus {
    font-size: 20pt;
  }

  /* Armor */
  .left-col .armor-heading-row {
    border-top: solid 2px #333333;
  }

  .left-col .left-row.armor-row .ability-label {
    font-size: 18pt;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .left-col .left-row.armor-row {
    margin-bottom: 10px;
    
  }

  /* Hp */
  .left-col .HP-heading-row {
    border-top: solid 2px black;
  }

  .left-col .left-row.HP-row .ability-label {
    font-size: 18pt;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  /* Dice Tray */
  .left-col .dice-tray {
    display: flex;
    justify-content: center;
    align-items: center;

    margin-top: 15px;
  }

  .left-col .dice-tray .dice-icon {
    width: 30px;
    height: 30px;
    margin-left: 3px;
    margin-right: 3px;
  }





  /***********************/
  /* Middle Column       */
  /***********************/
  .middle-col {
    width: 100%;
    height: 100%;

    border: solid 2px #333333;
    display: grid;
    grid-template-rows: 45px auto 1fr;
    grid-template-columns: 1fr;

    overflow: hidden;

  }

  .middle-col .name-exp-lvl-bar {
    display: grid;
    grid-template-columns: 6fr 2fr 1fr;
    border-bottom: solid 2px #333333;
  }

  .middle-col .input-bar {
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
    align-items: center;

    padding-top: 3px;
  }


  .middle-col .input-bar label {
    font-weight: bold;
    font-size: 10pt;
  }

  .middle-col .input-bar input {
    background-color: white;
    border: none;
    text-align: center;
    font-size: 14pt;
  }

  .middle-col .xp {
    border-left: solid 2px #333333;
    border-right: solid 2px #333333;
  }

  /* Portrait and Settings */
  .portrait-cell {
    grid-row: 2/3;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
  }

  .portrait-cell label {
    margin-top: 3px;
    margin-bottom: 3px;
    font-weight: bold;
    font-size: 10pt;
  }


  .portrait-cell .settings-panel {
    position: absolute;
    right: 0;
    top: 0;
    height: 15px;
    width: 14px;
    overflow: hidden;
    transition-duration: 0.3s;
  }
  
  .portrait-cell .settings-panel:hover {
    width: 150px;
    height: 100px;
    background-color: rgba(0, 0, 0, 0.8);
    transition-duration: 0.3s;
    color: white;
    border-bottom-left-radius: 5px;
  }

  .portrait-cell .settings-panel .settings-hoverover {
    position: absolute;
    right: 0;
    top: 1px;
  }

  .portrait-cell .settings-panel .generate-character {
    position: absolute;
    text-align: center;
    right: 35px;
    top: 25px;
    width: 80px;
    height: 50px;
    line-height: 20px;
    box-sizing: border-box;
    border-radius: 4px;
    color: black;
    background-color: white;
    border: none;
    border-bottom: solid 5px #e4e5e6;
  }

  .portrait-cell .settings-panel .generate-character:active {
    top: 30px;
    height: 45px;
    border-bottom: none;
  }




  /* Notes */

  .notes-cell {
    grid-row: 3/4;
    width: 100%;
    height: 100%;

    overflow: hidden;

  }


  .notes-cell .editor {
    width: 100%;
    height: 100%;
    overflow: hidden;

    font-family: "Averia Libre" !important;
  }

  .notes-cell .editor-content {
    width: 100%;
    height: 100%;
    
    padding-left: 5px;
    padding-right: 5px;

    overflow-y: hidden;
    word-wrap: break-word;
    overflow-wrap: break-word;
  }
/* ... */

